--- a/ml_zoomcamp_wk6-homework.ipynb
+++ b/ml_zoomcamp_wk6-homework.ipynb
@@ -965,7 +965,7 @@
     "scores = []\n",
     "\n",
     "for n in range (10, 201, 10):\n",
-    "    rf = RandomForestRegressor(n_estimators=n, random_state=1, n_jobs=1)\n",
+    "    rf = RandomForestRegressor(n_estimators=n, random_state=1, n_jobs=-1)\n",
     "    rf.fit(X_train, y_train)\n",
     "    y_pred = rf.predict(X_val)  \n",
     "    scores.append((n, rmse(y_val, y_pred)))\n",
@@ -1240,7 +1240,6 @@
    "outputs": [],
    "source": [
     "values = [10, 15, 20, 25]\n",
-    "means = []\n",
     "scores = []\n",
     "for v in values:\n",
     "    for n in range (10, 201, 10):\n",
@@ -1639,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1894,13 +1893,17 @@
     }
    ],
    "source": [
+    "import xgboost as xgb\n",
+    "\n",
+    "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
+    "dval = xgb.DMatrix(X_val, label=y_val)\n",
+    "\n",
+    "watchlist = [(dtrain, 'train'), (dval, 'val')]\n",
     "xgb_params = {\n",
     "    'eta': 0.3, \n",
     "    'max_depth': 6,\n",
     "    'min_child_weight': 1,\n",
-    "\n",
     "    'objective': 'reg:squarederror',\n",
-    "\n",
     "    'nthread': 8,\n",
     "    'seed': 1,\n",
     "    'verbosity': 1,\n",
